# mempalace2

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  __main__.py  archiver.py  checkpoint.py  context_manager.py  mcp_server.py  storage.py  summarizer.py
tests/: __init__.py  test_basic.py  test_functional.py
