[project]
name = "mempalace2"
version = "0.1.0"
description = "MemPalace2 - Context preservation and seamless resume for AI agents"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]